--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,9 @@
         <header>
             <h1>The Tech Blog</h1>
             <nav>
-                <a href="">Home</a>
+                <a href="/">Home</a>
                 <a href="">Dashboard</a>
-                <a href="">Login</a>
+                <a href="/login">Login</a>
                 <a href="">Logout</a>
             </nav>
         </header>
