logout front end functioning

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
                 <a href="/">Home</a>
                 <a href="">Dashboard</a>
                 <a href="/login">Login</a>
-                <a href="">Logout</a>
+                <button id="logout" class="btn-no-style">Logout</button>
             </nav>
         </header>
 
@@ -29,5 +29,7 @@
         </footer>
     </div>
     
+    <script src="/javascript/logout.js"></script>
+
 </body>
 </html>
