--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,3 +171,21 @@ form p{
     align-items: center;
     padding-top: 20px;
 }
+
+.btn-no-style{
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    text-decoration: none;
+    color: darkorange;
+    font-weight: bold;
+    font-size: 180%;
+    transition: color .1s;
+    margin: 0 10px;
+}
+
+.btn-no-style:hover{
+    background: none;
+    color: orangered;
+}
