adding comments and single post page

--- a/views/partials/single-post.handlebars
+++ b/views/partials/single-post.handlebars
@@ -1,8 +1,8 @@
 <section class="blog-post">
-    <div class="blog-header">
+    <a href="/post/{{id}}" class="blog-header">
         <h2>{{title}}</h2>
         <h3>Posted by {{user.username}} on {{createdAt}}</h3>
-    </div>
+    </a>
     <div class="blog-content">
         {{content}}
     </div>
