--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,11 @@ header h1{
     font-size: 300%;
 }
 
-a{
+.tech-blog-title{
+    text-decoration: none;
+}
+
+nav a{
     text-decoration: none;
     color: darkorange;
     font-weight: bold;
@@ -46,7 +50,7 @@ a{
     margin: 0 10px;
 }
 
-a:hover{
+nav a:hover{
     color: orangered;
 }
 
@@ -81,6 +85,7 @@ ol, li {
     background-color: orange;
     align-items: center;
     padding: 6px;
+    text-decoration: none;
 }
 
 .blog-header h2 {
@@ -159,6 +164,15 @@ button:hover {
 
 form a{
     font-size: 100%;
+    text-decoration: none;
+    color: darkorange;
+    font-weight: bold;
+    transition: color .1s;
+    margin: 0 10px;
+}
+
+nav a:hover{
+    color: orangered;
 }
 
 form p{
@@ -183,9 +197,36 @@ form p{
     font-size: 180%;
     transition: color .1s;
     margin: 0 10px;
+    min-width: 0px;
 }
 
 .btn-no-style:hover{
     background: none;
     color: orangered;
+}
+
+.comment{
+    margin: 4px 20px;
+    border: 6px solid orange;
+}
+
+.comment-header{
+    background-color: orange;
+    padding: 6px;
+}
+
+.comment-content{
+    padding: 10px;
+}
+
+.comment-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+}
+
+textarea{
+    min-width: 100%;
+    min-height: 80px;
 }
