--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>Tech Blog</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
     <div class="wrapper">
         <header>
-            <h1>The Tech Blog</h1>
+            <a href="/" class="tech-blog-title">
+                <h1>The Tech Blog</h1>
+            </a>
             <nav>
                 <a href="/">Home</a>
-                <a href="">Dashboard</a>
-                <a href="/login">Login</a>
+                <a href="/dashboard">Dashboard</a>
+                {{#if loggedIn}}
                 <button id="logout" class="btn-no-style">Logout</button>
+                {{else}}
+                <a href="/login">Login</a>
+                {{/if}}
             </nav>
         </header>
 
@@ -29,7 +34,9 @@
         </footer>
     </div>
     
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 
 </body>
 </html>
