--- a/views/partials/single-post-small.handlebars
+++ b/views/partials/single-post-small.handlebars
@@ -1,5 +1,5 @@
 <section class="blog-post">
-    <a href="/post/{{id}}" class="blog-header">
+    <a href="/dashboard/edit/{{id}}" class="blog-header">
         <h2>{{title}}</h2>
         <h3>{{createdAt}}</h3>
     </a>
