format dates and inactivity expiry

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -2,7 +2,7 @@
     {{#each this}}
         <section class="comment">
             <div class="comment-header">
-                Posted by {{user.username}} on {{created_at}}
+                Posted by {{user.username}} on {{format_date created_at}}
             </div>
             <div class="comment-content">
                 {{text}}
