--- a/views/partials/single-post-small.handlebars
+++ b/views/partials/single-post-small.handlebars
@@ -1,6 +1,6 @@
 <section class="blog-post">
     <a href="/dashboard/edit/{{id}}" class="blog-header">
         <h2>{{title}}</h2>
-        <h3>{{createdAt}}</h3>
+        <h3>{{format_date createdAt}}</h3>
     </a>
 </section>
